# minimal_rust_api

./: Cargo.toml  docker-compose.yaml
entity/: Cargo.toml
entity/src/: permission.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  permission_migration.rs  user_permission_migration.rs
src/: Cargo.toml  main.rs
src/controllers/: mod.rs  permission_controller.rs  user_controller.rs  user_permission_controller.rs
src/services/: mod.rs  permission_service.rs  user_permission_service.rs  user_service.rs
