[package]
name = "test_actix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.4.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[dependencies.sea-orm]
version = "0.12.6"                                                        # sea-orm version
features = ["debug-print", "runtime-async-std-native-tls", "sqlx-sqlite"]
